samples/_failures_safe/1761445181_71ac5c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cc82dc04.c: In function ‘state_to_string’:
./samples/SAFE/__tmp_cc82dc04.c:146:25: error: missing terminating " character
  146 |         default: return "UNKNOWN
      |                         ^~~~~~~~
./samples/SAFE/__tmp_cc82dc04.c:146:9: error: expected expression at end of input
  146 |         default: return "UNKNOWN
      |         ^~~~~~~
./samples/SAFE/__tmp_cc82dc04.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cc82dc04.c:146:9: error: expected declaration or statement at end of input
